[gd_scene load_steps=20 format=2]

[ext_resource path="res://textures/LittleMartianTextures/TILE_2A.png" type="Texture" id=1]
[ext_resource path="res://textures/LittleMartianTextures/CONCRETE_2A.png" type="Texture" id=2]
[ext_resource path="res://scripts/level2/SimManager.gd" type="Script" id=3]
[ext_resource path="res://addons/qodot/src/nodes/qodot_map.gd" type="Script" id=4]
[ext_resource path="res://textures/Tech/BIGSQUARES.tres" type="Material" id=5]
[ext_resource path="res://textures/customs/blackBlue.tres" type="Material" id=6]
[ext_resource path="res://addons/qodot/game_definitions/fgd/qodot_fgd.tres" type="Resource" id=7]
[ext_resource path="res://scripts/level2/element1.gd" type="Script" id=8]
[ext_resource path="res://models/gems/Crystal_003.obj" type="ArrayMesh" id=9]
[ext_resource path="res://scripts/level2/element2.gd" type="Script" id=10]
[ext_resource path="res://scripts/level2/System1.gd" type="Script" id=11]

[sub_resource type="SpatialMaterial" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 2 )

[sub_resource type="ArrayMesh" id=4]
surfaces/0 = {
"aabb": AABB( -19, -1, -22, 36, 2.00001, 46 ),
"array_data": PoolByteArray( 0, 0, 152, 193, 0, 0, 128, 63, 0, 0, 176, 193, 127, 127, 127, 193, 192, 196, 0, 180, 0, 0, 152, 193, 0, 0, 128, 191, 0, 0, 176, 193, 127, 127, 127, 193, 192, 196, 0, 52, 0, 0, 136, 65, 0, 0, 128, 191, 0, 0, 176, 193, 127, 127, 127, 193, 64, 68, 0, 52, 0, 0, 136, 65, 0, 0, 128, 63, 0, 0, 176, 193, 127, 127, 127, 193, 64, 68, 0, 180, 0, 0, 152, 193, 0, 0, 128, 63, 0, 0, 176, 193, 129, 0, 0, 63, 128, 197, 0, 180, 0, 0, 152, 193, 0, 0, 128, 63, 0, 0, 192, 65, 129, 0, 0, 63, 0, 70, 0, 180, 0, 0, 152, 193, 0, 0, 128, 191, 0, 0, 192, 65, 129, 0, 0, 63, 0, 70, 0, 52, 0, 0, 152, 193, 0, 0, 128, 191, 0, 0, 176, 193, 129, 0, 0, 63, 128, 197, 0, 52, 0, 0, 136, 65, 0, 0, 128, 191, 0, 0, 176, 193, 0, 129, 0, 193, 128, 197, 64, 196, 0, 0, 152, 193, 0, 0, 128, 191, 0, 0, 176, 193, 0, 129, 0, 193, 128, 197, 192, 68, 0, 0, 152, 193, 0, 0, 128, 191, 0, 0, 192, 65, 0, 129, 0, 193, 0, 70, 192, 68, 0, 0, 136, 65, 0, 0, 128, 191, 0, 0, 192, 65, 0, 129, 0, 193, 0, 70, 64, 196, 0, 0, 136, 65, 0, 0, 128, 63, 0, 0, 176, 193, 0, 127, 0, 63, 128, 197, 64, 196, 0, 0, 136, 65, 0, 0, 128, 63, 0, 0, 192, 65, 0, 127, 0, 63, 0, 70, 64, 196, 0, 0, 152, 193, 0, 0, 128, 63, 0, 0, 192, 65, 0, 127, 0, 63, 0, 70, 192, 68, 0, 0, 152, 193, 0, 0, 128, 63, 0, 0, 176, 193, 0, 127, 0, 63, 128, 197, 192, 68, 0, 0, 136, 65, 0, 0, 128, 63, 0, 0, 176, 193, 127, 0, 0, 193, 128, 197, 0, 180, 0, 0, 136, 65, 0, 0, 128, 191, 0, 0, 176, 193, 127, 0, 0, 193, 128, 197, 0, 52, 0, 0, 136, 65, 0, 0, 128, 191, 0, 0, 192, 65, 127, 0, 0, 193, 0, 70, 0, 52, 0, 0, 136, 65, 0, 0, 128, 63, 0, 0, 192, 65, 127, 0, 0, 193, 0, 70, 0, 180, 0, 0, 152, 193, 0, 0, 128, 63, 0, 0, 192, 65, 0, 0, 127, 63, 192, 196, 0, 180, 0, 0, 136, 65, 0, 0, 128, 63, 0, 0, 192, 65, 0, 0, 127, 63, 64, 68, 0, 180, 0, 0, 136, 65, 0, 0, 128, 191, 0, 0, 192, 65, 0, 0, 127, 63, 64, 68, 0, 52, 0, 0, 152, 193, 0, 0, 128, 191, 0, 0, 192, 65, 0, 0, 127, 63, 192, 196, 0, 52 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 0, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 4, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 8, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 12, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 16, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 20, 0, 22, 0, 23, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 36,
"material": SubResource( 2 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}
surfaces/1 = {
"aabb": AABB( -2, 1, -3, 5, 3, 6 ),
"array_data": PoolByteArray( 0, 0, 0, 192, 0, 0, 0, 64, 0, 0, 64, 192, 127, 127, 127, 193, 0, 184, 0, 184, 0, 0, 0, 192, 0, 0, 128, 63, 0, 0, 64, 192, 127, 127, 127, 193, 0, 184, 0, 180, 0, 0, 64, 64, 0, 0, 128, 63, 0, 0, 64, 192, 127, 127, 127, 193, 0, 58, 0, 180, 0, 0, 64, 64, 0, 0, 0, 64, 0, 0, 64, 192, 127, 127, 127, 193, 0, 58, 0, 184, 0, 0, 0, 192, 0, 0, 0, 64, 0, 0, 64, 192, 129, 0, 0, 63, 0, 186, 0, 184, 0, 0, 0, 192, 0, 0, 0, 64, 0, 0, 64, 64, 129, 0, 0, 63, 0, 58, 0, 184, 0, 0, 0, 192, 0, 0, 128, 63, 0, 0, 64, 64, 129, 0, 0, 63, 0, 58, 0, 180, 0, 0, 0, 192, 0, 0, 128, 63, 0, 0, 64, 192, 129, 0, 0, 63, 0, 186, 0, 180, 0, 0, 64, 64, 0, 0, 128, 63, 0, 0, 64, 192, 0, 129, 0, 193, 0, 186, 0, 186, 0, 0, 0, 192, 0, 0, 128, 63, 0, 0, 64, 192, 0, 129, 0, 193, 0, 186, 0, 56, 0, 0, 0, 192, 0, 0, 128, 63, 0, 0, 64, 64, 0, 129, 0, 193, 0, 58, 0, 56, 0, 0, 64, 64, 0, 0, 128, 63, 0, 0, 64, 64, 0, 129, 0, 193, 0, 58, 0, 186, 0, 0, 64, 64, 0, 0, 0, 64, 0, 0, 64, 192, 0, 127, 0, 63, 0, 186, 0, 186, 0, 0, 64, 64, 0, 0, 0, 64, 0, 0, 64, 64, 0, 127, 0, 63, 0, 58, 0, 186, 0, 0, 0, 192, 0, 0, 0, 64, 0, 0, 64, 64, 0, 127, 0, 63, 0, 58, 0, 56, 0, 0, 0, 192, 0, 0, 0, 64, 0, 0, 64, 192, 0, 127, 0, 63, 0, 186, 0, 56, 0, 0, 64, 64, 0, 0, 0, 64, 0, 0, 64, 192, 127, 0, 0, 193, 0, 186, 0, 184, 0, 0, 64, 64, 0, 0, 128, 63, 0, 0, 64, 192, 127, 0, 0, 193, 0, 186, 0, 180, 0, 0, 64, 64, 0, 0, 128, 63, 0, 0, 64, 64, 127, 0, 0, 193, 0, 58, 0, 180, 0, 0, 64, 64, 0, 0, 0, 64, 0, 0, 64, 64, 127, 0, 0, 193, 0, 58, 0, 184, 0, 0, 0, 192, 0, 0, 0, 64, 0, 0, 64, 64, 0, 0, 127, 63, 0, 184, 0, 184, 0, 0, 64, 64, 0, 0, 0, 64, 0, 0, 64, 64, 0, 0, 127, 63, 0, 58, 0, 184, 0, 0, 64, 64, 0, 0, 128, 63, 0, 0, 64, 64, 0, 0, 127, 63, 0, 58, 0, 180, 0, 0, 0, 192, 0, 0, 128, 63, 0, 0, 64, 64, 0, 0, 127, 63, 0, 184, 0, 180, 0, 0, 128, 191, 0, 0, 128, 64, 0, 0, 128, 191, 127, 127, 127, 193, 0, 180, 0, 188, 0, 0, 128, 191, 0, 0, 0, 64, 0, 0, 128, 191, 127, 127, 127, 193, 0, 180, 0, 184, 0, 0, 0, 64, 0, 0, 0, 64, 0, 0, 128, 191, 127, 127, 127, 193, 0, 56, 0, 184, 0, 0, 0, 64, 0, 0, 128, 64, 0, 0, 128, 191, 127, 127, 127, 193, 0, 56, 0, 188, 0, 0, 128, 191, 0, 0, 128, 64, 0, 0, 128, 191, 129, 0, 0, 63, 0, 180, 0, 188, 0, 0, 128, 191, 0, 0, 128, 64, 0, 0, 128, 63, 129, 0, 0, 63, 0, 52, 0, 188, 0, 0, 128, 191, 0, 0, 0, 64, 0, 0, 128, 63, 129, 0, 0, 63, 0, 52, 0, 184, 0, 0, 128, 191, 0, 0, 0, 64, 0, 0, 128, 191, 129, 0, 0, 63, 0, 180, 0, 184, 0, 0, 0, 64, 0, 0, 0, 64, 0, 0, 128, 191, 0, 129, 0, 193, 0, 180, 0, 184, 0, 0, 128, 191, 0, 0, 0, 64, 0, 0, 128, 191, 0, 129, 0, 193, 0, 180, 0, 52, 0, 0, 128, 191, 0, 0, 0, 64, 0, 0, 128, 63, 0, 129, 0, 193, 0, 52, 0, 52, 0, 0, 0, 64, 0, 0, 0, 64, 0, 0, 128, 63, 0, 129, 0, 193, 0, 52, 0, 184, 0, 0, 0, 64, 0, 0, 128, 64, 0, 0, 128, 191, 0, 127, 0, 63, 0, 180, 0, 184, 0, 0, 0, 64, 0, 0, 128, 64, 0, 0, 128, 63, 0, 127, 0, 63, 0, 52, 0, 184, 0, 0, 128, 191, 0, 0, 128, 64, 0, 0, 128, 63, 0, 127, 0, 63, 0, 52, 0, 52, 0, 0, 128, 191, 0, 0, 128, 64, 0, 0, 128, 191, 0, 127, 0, 63, 0, 180, 0, 52, 0, 0, 0, 64, 0, 0, 128, 64, 0, 0, 128, 191, 127, 0, 0, 193, 0, 180, 0, 188, 0, 0, 0, 64, 0, 0, 0, 64, 0, 0, 128, 191, 127, 0, 0, 193, 0, 180, 0, 184, 0, 0, 0, 64, 0, 0, 0, 64, 0, 0, 128, 63, 127, 0, 0, 193, 0, 52, 0, 184, 0, 0, 0, 64, 0, 0, 128, 64, 0, 0, 128, 63, 127, 0, 0, 193, 0, 52, 0, 188, 0, 0, 128, 191, 0, 0, 128, 64, 0, 0, 128, 63, 0, 0, 127, 63, 0, 180, 0, 188, 0, 0, 0, 64, 0, 0, 128, 64, 0, 0, 128, 63, 0, 0, 127, 63, 0, 56, 0, 188, 0, 0, 0, 64, 0, 0, 0, 64, 0, 0, 128, 63, 0, 0, 127, 63, 0, 56, 0, 184, 0, 0, 128, 191, 0, 0, 0, 64, 0, 0, 128, 63, 0, 0, 127, 63, 0, 180, 0, 184 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 0, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 4, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 8, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 12, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 16, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 20, 0, 22, 0, 23, 0, 24, 0, 25, 0, 26, 0, 24, 0, 26, 0, 27, 0, 28, 0, 29, 0, 30, 0, 28, 0, 30, 0, 31, 0, 32, 0, 33, 0, 34, 0, 32, 0, 34, 0, 35, 0, 36, 0, 37, 0, 38, 0, 36, 0, 38, 0, 39, 0, 40, 0, 41, 0, 42, 0, 40, 0, 42, 0, 43, 0, 44, 0, 45, 0, 46, 0, 44, 0, 46, 0, 47, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 72,
"material": SubResource( 3 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 48
}
surfaces/2 = {
"aabb": AABB( -4, 4, -4, 9, 1.00001, 8 ),
"array_data": PoolByteArray( 0, 0, 128, 192, 0, 0, 160, 64, 0, 0, 128, 192, 127, 127, 127, 193, 0, 192, 0, 193, 0, 0, 128, 192, 0, 0, 128, 64, 0, 0, 128, 192, 127, 127, 127, 193, 0, 192, 0, 192, 0, 0, 160, 64, 0, 0, 128, 64, 0, 0, 128, 192, 127, 127, 127, 193, 0, 65, 0, 192, 0, 0, 160, 64, 0, 0, 160, 64, 0, 0, 128, 192, 127, 127, 127, 193, 0, 65, 0, 193, 0, 0, 128, 192, 0, 0, 160, 64, 0, 0, 128, 192, 129, 0, 0, 63, 0, 192, 0, 193, 0, 0, 128, 192, 0, 0, 160, 64, 0, 0, 128, 64, 129, 0, 0, 63, 0, 64, 0, 193, 0, 0, 128, 192, 0, 0, 128, 64, 0, 0, 128, 64, 129, 0, 0, 63, 0, 64, 0, 192, 0, 0, 128, 192, 0, 0, 128, 64, 0, 0, 128, 192, 129, 0, 0, 63, 0, 192, 0, 192, 0, 0, 160, 64, 0, 0, 128, 64, 0, 0, 128, 192, 0, 129, 0, 193, 0, 192, 0, 193, 0, 0, 128, 192, 0, 0, 128, 64, 0, 0, 128, 192, 0, 129, 0, 193, 0, 192, 0, 64, 0, 0, 128, 192, 0, 0, 128, 64, 0, 0, 128, 64, 0, 129, 0, 193, 0, 64, 0, 64, 0, 0, 160, 64, 0, 0, 128, 64, 0, 0, 128, 64, 0, 129, 0, 193, 0, 64, 0, 193, 0, 0, 160, 64, 0, 0, 160, 64, 0, 0, 128, 192, 0, 127, 0, 63, 0, 192, 0, 193, 0, 0, 160, 64, 0, 0, 160, 64, 0, 0, 128, 64, 0, 127, 0, 63, 0, 64, 0, 193, 0, 0, 128, 192, 0, 0, 160, 64, 0, 0, 128, 64, 0, 127, 0, 63, 0, 64, 0, 64, 0, 0, 128, 192, 0, 0, 160, 64, 0, 0, 128, 192, 0, 127, 0, 63, 0, 192, 0, 64, 0, 0, 160, 64, 0, 0, 160, 64, 0, 0, 128, 192, 127, 0, 0, 193, 0, 192, 0, 193, 0, 0, 160, 64, 0, 0, 128, 64, 0, 0, 128, 192, 127, 0, 0, 193, 0, 192, 0, 192, 0, 0, 160, 64, 0, 0, 128, 64, 0, 0, 128, 64, 127, 0, 0, 193, 0, 64, 0, 192, 0, 0, 160, 64, 0, 0, 160, 64, 0, 0, 128, 64, 127, 0, 0, 193, 0, 64, 0, 193, 0, 0, 128, 192, 0, 0, 160, 64, 0, 0, 128, 64, 0, 0, 127, 63, 0, 192, 0, 193, 0, 0, 160, 64, 0, 0, 160, 64, 0, 0, 128, 64, 0, 0, 127, 63, 0, 65, 0, 193, 0, 0, 160, 64, 0, 0, 128, 64, 0, 0, 128, 64, 0, 0, 127, 63, 0, 65, 0, 192, 0, 0, 128, 192, 0, 0, 128, 64, 0, 0, 128, 64, 0, 0, 127, 63, 0, 192, 0, 192 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 0, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 4, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 8, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 12, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 16, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 20, 0, 22, 0, 23, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 36,
"material": ExtResource( 5 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="ConvexPolygonShape" id=5]
points = PoolVector3Array( -19, 1, -22, -19, -1, -22, 17, -1, -22, 17, 1, -22, -19, 1, 24, -19, -1, 24, 17, -1, 24, 17, 1, 24 )

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( -2, 2, -3, -2, 1, -3, 3, 1, -3, 3, 2, -3, -2, 2, 3, -2, 1, 3, 3, 1, 3, 3, 2, 3 )

[sub_resource type="ConvexPolygonShape" id=7]
points = PoolVector3Array( -1, 4, -1, -1, 2, -1, 2, 2, -1, 2, 4, -1, -1, 4, 1, -1, 2, 1, 2, 2, 1, 2, 4, 1 )

[sub_resource type="ConvexPolygonShape" id=8]
points = PoolVector3Array( -4, 5, -4, -4, 4, -4, 5, 4, -4, 5, 5, -4, -4, 5, 4, -4, 4, 4, 5, 4, 4, 5, 5, 4 )

[node name="Spatial" type="Spatial"]

[node name="QodotMap" type="Spatial" parent="."]
script = ExtResource( 4 )
map_file = "C:/Projects/OrganicDev/QodotMaps/demo.map"
inverse_scale_factor = 16.0
entity_fgd = ExtResource( 7 )
base_texture_dir = "res://textures"
texture_file_extensions = PoolStringArray( "png" )
worldspawn_layers = [  ]
brush_clip_texture = "special/clip"
face_skip_texture = "special/skip"
texture_wads = [  ]
material_file_extension = "tres"
default_material = SubResource( 1 )
uv_unwrap_texel_size = 1.0
print_profiling_data = false
use_trenchbroom_group_hierarchy = false
tree_attach_batch_size = 16
set_owner_batch_size = 16

[node name="entity_0_worldspawn" type="StaticBody" parent="QodotMap"]

[node name="entity_0_mesh_instance" type="MeshInstance" parent="QodotMap/entity_0_worldspawn"]
use_in_baked_light = true
mesh = SubResource( 4 )

[node name="entity_0_brush_0_collision_shape" type="CollisionShape" parent="QodotMap/entity_0_worldspawn"]
shape = SubResource( 5 )

[node name="entity_0_brush_1_collision_shape" type="CollisionShape" parent="QodotMap/entity_0_worldspawn"]
shape = SubResource( 6 )

[node name="entity_0_brush_2_collision_shape" type="CollisionShape" parent="QodotMap/entity_0_worldspawn"]
shape = SubResource( 7 )

[node name="entity_0_brush_3_collision_shape" type="CollisionShape" parent="QodotMap/entity_0_worldspawn"]
shape = SubResource( 8 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.907748, -0.151618, 0.391159, -0.419515, -0.328072, 0.84639, 0, -0.932406, -0.361413, 0, 6.97329, 26.8019 )

[node name="SimManager" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -3.93306e-08, 0.436346, -0.899779, 1.90733e-08, 0.899779, 0.436346, 1, 1.77636e-15, -4.37114e-08, -12.9238, 10.9713, 0.766889 )

[node name="System1" type="Spatial" parent="." groups=["SimElements"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.06569, 0 )
script = ExtResource( 11 )

[node name="element1" type="MeshInstance" parent="System1" groups=["SimElements"]]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.5289, 0, -0.666372 )
mesh = ExtResource( 9 )
skeleton = NodePath("../..")
material/0 = ExtResource( 6 )
script = ExtResource( 8 )

[node name="element1a" type="MeshInstance" parent="System1" groups=["SimElements"]]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.5289, 0, 0.765846 )
mesh = ExtResource( 9 )
skeleton = NodePath("../..")
material/0 = ExtResource( 6 )
script = ExtResource( 8 )

[node name="element2" type="MeshInstance" parent="System1" groups=["SimElements"]]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
mesh = ExtResource( 9 )
skeleton = NodePath("../..")
material/0 = ExtResource( 6 )
script = ExtResource( 10 )
